--- a/css/global.css
+++ b/css/global.css
@@ -6,6 +6,7 @@ body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 .wrapper {
