--- a/css/global.css
+++ b/css/global.css
@@ -11,14 +11,22 @@ body {
   margin: 0;
 }
 
-.wrapper {
-  margin: 60px auto;
-  padding: 0 15px;
-  max-width: 600px;  
+h1 {
+  font-size: 42px;
 }
 
 #redbox {
   width: 100px;
   height: 100px;
   background-color: red;
+}
+
+.wrapper {
+  margin: 60px auto;
+  padding: 0 15px;
+  max-width: 600px;  
+}
+
+.text-center {
+  text-align: center;
 }
