--- a/css/global.css
+++ b/css/global.css
@@ -16,9 +16,11 @@ h1 {
 }
 
 #redbox {
-  width: 100px;
-  height: 100px;
   background-color: red;
+}
+
+#greenbox {
+  background-color: green;
 }
 
 .wrapper {
@@ -29,4 +31,25 @@ h1 {
 
 .text-center {
   text-align: center;
+}
+
+.spacer {
+  width: 100%;
+  height: 600px;
+}
+
+.ani-canvas {
+  width: 100%;
+  position: relative;
+}
+
+.box {
+  width: 100px;
+  height: 100px;  
+  display: none;
+}
+
+.box.active {
+  display: block;
+  position: absolute;
 }
